Fixed White Gap Between Background and <p> tag

--- a/src/desktop.css
+++ b/src/desktop.css
@@ -1,3 +1,4 @@
 .desktop {
-    margin-block-start: 0;
+    position: absolute;
+    top: 0px;
 }
